Fixed input width to prevent it from overflowing

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -1,15 +1,22 @@
 body {
   margin: auto;
   background-color: #d8eefe;
-  padding-left: 12px;
-  padding-right: 12px;
   padding-top: calc(64px / 4);
   padding-bottom: calc(64px / 4);
+}
+
+main {
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 *,
 body {
   font-family: "Rubik";
+}
+
+input, select {
+  padding-left: 10px;
 }
 
 .table,
@@ -53,6 +60,9 @@ figure {
     padding-top: calc(64px / 2);
     padding-bottom: calc(64px / 2);
   }
+input, select {
+  padding-left: 20px;
+}
 
   h1,
   .person-name,
